--- a/hkube/templates/busybox-pod.yaml
+++ b/hkube/templates/busybox-pod.yaml
@@ -7,6 +7,10 @@ metadata:
     group: {{ .Values.labels.group.value }}
     thirdparty: "true"
 spec:
+{{- if .Values.global.registry_password }}
+  imagePullSecrets:
+    - name: image-pull-secret
+{{- end }}  
   containers:
   - image: "{{ .Values.global.registry }}{{ index .Values "busybox" "image" "repository" }}:{{ index .Values "busybox" "image" "tag" }}"
     command:
