--- a/hkube/templates/job-cleaner-deployment.yaml
+++ b/hkube/templates/job-cleaner-deployment.yaml
@@ -23,6 +23,10 @@ spec:
         release: clean-old-jobs
         group: {{ .Values.labels.group.value }}
     spec:
+{{- if .Values.global.registry_password }}
+      imagePullSecrets:
+        - name: image-pull-secret
+{{- end }}      
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
