--- a/hkube/templates/pipeline-cleaner.deployment.yaml
+++ b/hkube/templates/pipeline-cleaner.deployment.yaml
@@ -16,6 +16,10 @@ spec:
           labels:
             app: "pipeline-cleaner"
         spec:
+{{- if .Values.global.registry_password }}
+          imagePullSecrets:
+            - name: image-pull-secret
+{{- end }}          
           containers:
           - name: pipeline-cleaner
             image: "{{ .Values.global.registry }}{{ index  .Values "pipeline_cleaner" "image" "repository" }}:{{ index .Values "pipeline_cleaner" "image" "tag" }}"
