--- a/hkube/templates/resource-manager-deployment.yaml
+++ b/hkube/templates/resource-manager-deployment.yaml
@@ -20,6 +20,10 @@ spec:
         app: resource-manager
         group: {{ .Values.labels.group.value }}
     spec:
+{{- if .Values.global.registry_password }}
+      imagePullSecrets:
+        - name: image-pull-secret
+{{- end }}      
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
