--- a/hkube/templates/storage-cleaner-deployment.yaml
+++ b/hkube/templates/storage-cleaner-deployment.yaml
@@ -14,6 +14,10 @@ spec:
     spec:
       template:
         spec:
+{{- if .Values.global.registry_password }}
+          imagePullSecrets:
+            - name: image-pull-secret
+{{- end }}          
 {{- if eq .Values.env.default_storage "fs" }}
           volumes:
             - name: storage-volume
