--- a/hkube/templates/task-executor-role.yaml
+++ b/hkube/templates/task-executor-role.yaml
@@ -86,7 +86,11 @@ metadata:
   labels:
     group: {{ .Values.labels.group.value }}
     app: task-executor
-    core: "true"    
+    core: "true"
+{{- if .Values.global.registry_password }}
+imagePullSecrets:
+  - name: image-pull-secret
+{{- end }}    
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
