--- a/hkube/templates/etcd-defrag.yaml
+++ b/hkube/templates/etcd-defrag.yaml
@@ -15,6 +15,10 @@ spec:
     spec:
       template:
         spec:
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
+          imagePullSecrets:
+            - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}
           serviceAccountName: clean-old-jobs
           containers:
           - name: etcd-defrag-cron
