--- a/hkube/templates/imagePullSecret.yaml
+++ b/hkube/templates/imagePullSecret.yaml
@@ -10,7 +10,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: image-pull-secret
+  name: {{ .Values.global.image_pull_secret.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     group: hkube
