--- a/hkube/templates/pre-delete.yaml
+++ b/hkube/templates/pre-delete.yaml
@@ -20,6 +20,10 @@ spec:
         release: {{.Release.Name | quote }}
         chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
+      imagePullSecrets:
+        - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}   
       serviceAccountName: cleanup-serviceaccount
       restartPolicy: Never
       containers:
