--- a/hkube/templates/task-executor-role.yaml
+++ b/hkube/templates/task-executor-role.yaml
@@ -87,10 +87,10 @@ metadata:
     group: {{ .Values.labels.group.value }}
     app: task-executor
     core: "true"
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
 imagePullSecrets:
-  - name: image-pull-secret
-{{- end }}    
+  - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}   
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
