--- a/hkube/templates/algorithm-builder-role.yaml
+++ b/hkube/templates/algorithm-builder-role.yaml
@@ -6,9 +6,9 @@ metadata:
     group: {{ .Values.labels.group.value }}
     app: algorithm-builder
     core: "true"
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
 imagePullSecrets:
-  - name: image-pull-secret
+  - name: {{ .Values.global.image_pull_secret.name }}
 {{- end }}
 ---
 kind: Role
