--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -23,10 +23,10 @@ spec:
         group: {{ .Values.labels.group.value }}
     spec:
       serviceAccountName: algorithm-operator-serviceaccount
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
-        - name: image-pull-secret
-{{- end }}  
+        - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
