--- a/hkube/templates/busybox-pod.yaml
+++ b/hkube/templates/busybox-pod.yaml
@@ -7,9 +7,9 @@ metadata:
     group: {{ .Values.labels.group.value }}
     thirdparty: "true"
 spec:
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
   imagePullSecrets:
-    - name: image-pull-secret
+    - name: {{ .Values.global.image_pull_secret.name }}
 {{- end }}  
   containers:
   - image: "{{ .Values.global.registry }}{{ index .Values "busybox" "image" "repository" }}:{{ index .Values "busybox" "image" "tag" }}"
