--- a/hkube/templates/caching-service-deployment.yaml
+++ b/hkube/templates/caching-service-deployment.yaml
@@ -23,10 +23,10 @@ spec:
         release: {{ .Release.Name }}
         group: {{ .Values.labels.group.value }}
     spec:
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
-        - name: image-pull-secret
-{{- end }}      
+        - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}     
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
