--- a/hkube/templates/etcd-cleaner-deployment.yaml
+++ b/hkube/templates/etcd-cleaner-deployment.yaml
@@ -13,10 +13,10 @@ spec:
     spec:
       template:
         spec:
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
           imagePullSecrets:
-            - name: image-pull-secret
-{{- end }}          
+            - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}        
           containers:
           - name: etcd-cleaner
             image: "{{ .Values.global.registry }}{{ index  .Values "etcd_cleaner" "image" "repository" }}:{{ index .Values "etcd_cleaner" "image" "tag" }}"
