--- a/hkube/templates/storage-migration.yaml
+++ b/hkube/templates/storage-migration.yaml
@@ -21,10 +21,10 @@ spec:
         release: {{.Release.Name | quote }}
         chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
-{{- if .Values.global.registry_password }}
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
-        - name: image-pull-secret
-{{- end }}        
+        - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}       
       restartPolicy: Never
 {{- if eq .Values.env.default_storage "fs" }}
       volumes:
