--- a/hkube/templates/docker-credentials-secret.yaml
+++ b/hkube/templates/docker-credentials-secret.yaml
@@ -8,14 +8,14 @@ metadata:
     group: hkube
     core: "true"
 data:
-  docker_pull_registry: {{ .Values.global.registry | b64enc | quote }}
+  docker_pull_registry: {{ .Values.global.registry | trimSuffix "/" | b64enc | quote }}
   docker_pull_namespace: {{ .Values.global.registry_namespace | b64enc | quote }}
   docker_pull_username: {{ .Values.global.registry_username | b64enc | quote }}
   docker_pull_password: {{ .Values.global.registry_password | b64enc | quote }}
   docker_pull_insecure: {{ .Values.global.registry_insecure | toString | b64enc | quote }}
   docker_pull_skip_tls_verify: {{ .Values.global.registry_skip_tls_verify | toString | b64enc | quote }}
   
-  docker_push_registry: {{ .Values.build_secret.docker_registry | b64enc | quote }}
+  docker_push_registry: {{ .Values.build_secret.docker_registry | trimSuffix "/" | b64enc | quote }}
   {{ if and (not .Values.build_secret.docker_namespace) (.Values.build_secret.docker_username) }}
   docker_push_namespace: {{ .Values.build_secret.docker_username | b64enc | quote }}
   {{ else }}
