--- a/hkube/templates/api-server-deployment.yaml
+++ b/hkube/templates/api-server-deployment.yaml
@@ -139,3 +139,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: INGRESS_PREFIX
+              valueFrom:
+                configMapKeyRef:
+                  name: api-server-configmap
+                  key: INGRESS_PREFIX
