--- a/hkube/templates/configmaps/api-server-cm.yaml
+++ b/hkube/templates/configmaps/api-server-cm.yaml
@@ -16,5 +16,6 @@ data:
   PORT: {{index .Values "api_server" "env" "port" | quote}}
   PIPELINE_DRIVER_CPU: {{index .Values "api_server" "env" "pipeline_driver_cpu" | quote}}
   PIPELINE_DRIVER_MEM: {{index .Values "api_server" "env" "pipeline_driver_mem" | quote}}
+  INGRESS_PREFIX: {{ .Values.global.ingress.prefix | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
 
