--- a/hkube/templates/pre-upgrade.yaml
+++ b/hkube/templates/pre-upgrade.yaml
@@ -29,9 +29,12 @@ spec:
       containers:
       - name: post-del-dep-and-jobs
         image: "{{ .Values.global.registry }}{{ index .Values "delete_deployment_and_jobs" "image" "repository" }}:{{ index .Values "delete_deployment_and_jobs" "image" "tag" }}"
+{{- if .Values.global.resources_enable }}          
         resources:
-{{ toYaml .Values.delete_deployment_and_jobs.resources | indent 10 }} 
-
+{{ toYaml .Values.delete_deployment_and_jobs.resources | indent 10 }}
+{{- else }}
+        resources: {}
+{{- end }}     
         command:
           - /bin/sh
           - -c
