--- a/hkube/templates/storage-migration.yaml
+++ b/hkube/templates/storage-migration.yaml
@@ -35,8 +35,12 @@ spec:
       containers:
       - name: storage-migration
         image: {{ .Values.global.registry }}{{ .Values.storage_migration.image.repository }}:{{ .Values.storage_migration.image.tag }}
+{{- if .Values.global.resources_enable }}          
         resources:
-{{ toYaml .Values.storage_migration.resources | indent 10 }} 
+{{ toYaml .Values.storage_migration.resources | indent 10 }}
+{{- else }}
+        resources: {}
+{{- end }}        
 {{- if eq .Values.env.default_storage "fs" }}
         volumeMounts:
           - name: storage-volume
