--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -18,6 +18,8 @@ global:
     name: hkube-imagepullsecret
     # use an existing imagepullsecret (doesn't create the secret)
     use_existing: false
+  # If false, will not set resource request and limits on hkube pods. If true will set the values for each pod
+  resources_enable: false
   storage:
   # encoding for storage. can be msgpack, bson, json
     encoding: msgpack
@@ -222,7 +224,7 @@ api_server: # +doc-gen:ignore
     metric_port: '3001'
     port: '3000'
     pipeline_driver_cpu: '0.2'
-    pipeline_driver_mem: '2048'
+    pipeline_driver_mem: '512'
   image:
     repository: hkube/api-server
     tag: v1.3.39
@@ -549,6 +551,10 @@ sync_server: # +doc-gen:ignore
   ingress:
     enabled: true
     path: /hkube/sync
+  resources:
+    requests:
+      cpu: 100m
+      memory: 256Mi
 storage_migration: # +doc-gen:ignore
   enable: false
   env:
