--- a/chart-doc/docs.yaml
+++ b/chart-doc/docs.yaml
@@ -4,7 +4,7 @@ project:
   url: https://github.com/kube-HPC/hkube
   description: cloud-native open source framework to run distributed pipeline of algorithms
 repository:
-  url: https://hkube.io/helm/dev
+  url: https://hkube.io/helm
   name: hkube
 chart:
   name: hkube
