move to travis-ci.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script:
   - git config  remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
   - git fetch origin
   - ./package.sh
-  - curl -X POST -H 'accept:application/json' -H "authorization:token ${TRAVIS_API_TOKEN}" -H 'content-type:application/json' -H 'travis-api-version:3' -d "{\"request\":{\"branch\":\"master\",\"message\":\"triggered by ${TRAVIS_REPO_SLUG}\"}}" "https://api.travis-ci.org/repo/kube-HPC%2Fcd-manager/requests"
+  - curl -X POST -H 'accept:application/json' -H "authorization:token ${TRAVIS_API_TOKEN}" -H 'content-type:application/json' -H 'travis-api-version:3' -d "{\"request\":{\"branch\":\"master\",\"message\":\"triggered by ${TRAVIS_REPO_SLUG}\"}}" "https://api.travis-ci.com/repo/kube-HPC%2Fcd-manager/requests"
 
