--- a/hkube/templates/hkube-metrics.yaml
+++ b/hkube/templates/hkube-metrics.yaml
@@ -29,7 +29,7 @@ metadata:
     app: hkube-etcd
     release: metrics
   name: hkube-etcd
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 spec:
   endpoints:
     - path: /metrics
