don't create imagePullSecret if use_existing is true

--- a/hkube/templates/imagePullSecret.yaml
+++ b/hkube/templates/imagePullSecret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.registry_password }}
+{{- if and .Values.global.registry_password (not .Values.global.image_pull_secret.use_existing) }}
 {{- $registryAuthDocument := dict -}}
 {{- $_ := set $registryAuthDocument "username" .Values.global.registry_username }}
 {{- $_ := set $registryAuthDocument "password" .Values.global.registry_password }}
