ci - add trigger event

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [master]
-
+  repository_dispatch: 
+      types: [trigger]
+  workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -23,15 +25,15 @@ jobs:
           node-version: 14.x
       # disable lint for now because of https://github.com/helm/helm/issues/8615
       # - run: helm lint hkube/
-      # - run: |
-      #     git config --local user.email "action@github.com"
-      #     git config --local user.name "GitHub Action"
-      # - run: |
-      #     npm version patch -m "$(git log -1 --pretty=%B) .... bump version"
-      #     echo TAG=$(git describe --abbrev=0) >> $GITHUB_ENV
-      # - run: git push --follow-tags
-      # - name: chart
-      #   run: ./package.sh
+      - run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+      - run: |
+          npm version patch -m "$(git log -1 --pretty=%B) .... bump version"
+          echo TAG=$(git describe --abbrev=0) >> $GITHUB_ENV
+      - run: git push --follow-tags
+      - name: chart
+        run: ./package.sh
       - name: trigger
         id: trigger
         uses: octokit/request-action@v2.x
